k8s/namespaces/pbx/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pbx
  labels:
    app.kubernetes.io/name: pbx
    app.kubernetes.io/part-of: pbx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: pbx
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
